# Warden

./: .gitignore  Cargo.toml  README.md
assets/: servers.db
src/: bot.rs  db.rs  logger.rs  main.rs
src/bot/: events.rs  music_order.rs  music_playing.rs  settings.rs
src/db/: connections.rs  models.rs
